SimpleRobot/ros2_ws/log_user/build_2026-06-25_16-07-14/avs_perception/stdout_stderr.log
-- The C compiler identification is GNU 11.4.0
-- The CXX compiler identification is GNU 11.4.0
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working C compiler: /usr/bin/cc - skipped
-- Detecting C compile features
-- Detecting C compile features - done
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- AVS: Release build — Generic/x86_64 optimizations ENABLED (-O3)
-- Found ament_cmake: 1.3.14 (/opt/ros/humble/share/ament_cmake/cmake)
-- Found Python3: /usr/bin/python3 (found version "3.10.12") found components: Interpreter 
-- Override CMake install command with custom implementation using symlinks instead of copying resources
-- Found rclcpp: 16.0.19 (/opt/ros/humble/share/rclcpp/cmake)
-- Found rosidl_generator_c: 3.1.8 (/opt/ros/humble/share/rosidl_generator_c/cmake)
-- Found rosidl_adapter: 3.1.8 (/opt/ros/humble/share/rosidl_adapter/cmake)
-- Found rosidl_generator_cpp: 3.1.8 (/opt/ros/humble/share/rosidl_generator_cpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 6.1.2 (/opt/ros/humble/share/rmw_implementation_cmake/cmake)
-- Found rmw_fastrtps_cpp: 6.2.10 (/opt/ros/humble/share/rmw_fastrtps_cpp/cmake)
-- Found OpenSSL: /usr/lib/x86_64-linux-gnu/libcrypto.so (found version "3.0.2")  
-- Found FastRTPS: /opt/ros/humble/include  
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Looking for pthread.h
-- Looking for pthread.h - found
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD - Success
-- Found Threads: TRUE  
-- Found sensor_msgs: 4.9.1 (/opt/ros/humble/share/sensor_msgs/cmake)
-- Found nav_msgs: 4.9.1 (/opt/ros/humble/share/nav_msgs/cmake)
-- Found cv_bridge: 3.2.1 (/opt/ros/humble/share/cv_bridge/cmake)
-- Found image_transport: 3.1.12 (/opt/ros/humble/share/image_transport/cmake)
-- Found OpenCV: /usr (found version "4.5.4") 
-- Found OpenMP_C: -fopenmp (found version "4.5") 
-- Found OpenMP_CXX: -fopenmp (found version "4.5") 
-- Found OpenMP: TRUE (found version "4.5")  
-- Found ncnn: 20260605
-- Configuring done
-- Generating done
-- Build files have been written to: /home/goln/SimpleSysIDV/ros2_ws/build_user/avs_perception
[ 33%] [32mBuilding CXX object CMakeFiles/video_publisher_node.dir/src/video_publisher_node.cpp.o[0m
[ 33%] [32mBuilding CXX object CMakeFiles/yolo26_seg_lib.dir/src/yolo26_seg.cpp.o[0m
[ 33%] [32mBuilding CXX object CMakeFiles/ipm_transform_node.dir/src/ipm_transform_node.cpp.o[0m
[ 33%] [32mBuilding CXX object CMakeFiles/control_node.dir/src/control_node.cpp.o[0m
[ 41%] [32m[1mLinking CXX static library libyolo26_seg_lib.a[0m
[ 41%] Built target yolo26_seg_lib
[ 58%] [32mBuilding CXX object CMakeFiles/ncnn_inference_node.dir/src/ncnn_inference_node.cpp.o[0m
[ 58%] [32mBuilding CXX object CMakeFiles/video_test_node.dir/src/video_test_node.cpp.o[0m
/home/goln/SimpleSysIDV/ros2_ws/src/avs_perception/src/control_node.cpp: In member function ‘ActiveTrajectory LaneErrorNode::connect_two_lanes_smooth(const LaneCandidate&, const LaneCandidate&)’:
/home/goln/SimpleSysIDV/ros2_ws/src/avs_perception/src/control_node.cpp:1278:17: error: redeclaration of ‘Point2D P0’
 1278 |         Point2D P0 = traj.points.back();
      |                 ^~
/home/goln/SimpleSysIDV/ros2_ws/src/avs_perception/src/control_node.cpp:1267:17: note: ‘Point2D P0’ previously declared here
 1267 |         Point2D P0 = traj.points.back();
      |                 ^~
/home/goln/SimpleSysIDV/ros2_ws/src/avs_perception/src/control_node.cpp:1279:17: error: redeclaration of ‘Point2D P3’
 1279 |         Point2D P3 = traj_ahead.points.front();
      |                 ^~
/home/goln/SimpleSysIDV/ros2_ws/src/avs_perception/src/control_node.cpp:1268:17: note: ‘Point2D P3’ previously declared here
 1268 |         Point2D P3 = traj_ahead.points.front();
      |                 ^~
gmake[2]: *** [CMakeFiles/control_node.dir/build.make:76: CMakeFiles/control_node.dir/src/control_node.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:277: CMakeFiles/control_node.dir/all] Error 2
gmake[1]: *** Waiting for unfinished jobs....
[ 66%] [32m[1mLinking CXX executable video_test_node[0m
[ 75%] [32m[1mLinking CXX executable video_publisher_node[0m
[ 75%] Built target video_test_node
[ 75%] Built target video_publisher_node
[ 83%] [32m[1mLinking CXX executable ncnn_inference_node[0m
[ 83%] Built target ncnn_inference_node
[ 91%] [32m[1mLinking CXX executable ipm_transform_node[0m
[ 91%] Built target ipm_transform_node
gmake: *** [Makefile:146: all] Error 2
